--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ashok Hotels - Luxury Accommodations & Refined Hospitality</title>
-    <meta name="description" content="Experience luxury at Ashok Hotels. Deluxe accommodations, exceptional dining, and refined hospitality in an elegant setting. Book your stay today." />
-    <meta name="author" content="Ashok Hotels" />
+    <title>Grand Palace Hotel - Luxury Accommodations & Refined Hospitality</title>
+    <meta name="description" content="Experience luxury at Grand Palace Hotel. Deluxe accommodations, exceptional dining, and refined hospitality in an elegant setting. Book your stay today." />
+    <meta name="author" content="Grand Palace Hotel" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Ashok Hotels - Luxury Accommodations" />
-    <meta property="og:description" content="Experience luxury at Ashok Hotels. Deluxe accommodations, exceptional dining, and refined hospitality." />
+    <meta property="og:title" content="Grand Palace Hotel - Luxury Accommodations" />
+    <meta property="og:description" content="Experience luxury at Grand Palace Hotel. Deluxe accommodations, exceptional dining, and refined hospitality." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@GrandPalaceHotel" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" />
   </head>
 
   <body>
